# corporate_trainings

./: README.md
Gen_AI/Amity_Software_Gen_AI_Foundations/Burget-Bot-main/notebook/: Burger_Bot.ipynb
Gen_AI/Amity_Software_Gen_AI_Foundations/code/notebook/: Amity_RAG.ipynb
Gen_AI/Amity_Software_Gen_AI_Foundations/code/src/: README.md  app.py  data_ingestion.py  data_retrieval.py  main.py  pyproject.toml
Gen_AI/EY/: Training Programme - Agentic AI using langgraph, Autogen and CrewAI.docx
Generic/: README.md
LLMOps/: README.md
LLMOps/Baxter_LLMOps/: README.md  main.py  pyproject.toml
MLOps/EXL_MLOps/content/: README.md
